--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,12 @@
 {
   "name": "Lira Link",
-  "short_name": "LiraLink",
-  "description": "تطبيق تحويل العملات الذكي، مع أسعار الكريبتو والفوركس المباشرة",
-  "start_url": "index.html",
+  "short_name": "Lira Link",
+  "description": "Smart Currency Converter by MR.Q",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f8fafd",
   "theme_color": "#1a73e8",
-  "orientation": "portrait-primary",
   "icons": [
-    {
-      "src": "image11.jpg",
-      "sizes": "192x192",
-      "type": "image/jpeg"
-    },
     {
       "src": "image11.jpg",
       "sizes": "512x512",
