--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,35 @@
 {
+  "id": "lira-link-app",
   "name": "Lira Link",
   "short_name": "Lira Link",
-  "description": "Smart Currency Converter by MR.Q",
+  "description": "Smart Currency Converter for Syria",
   "start_url": "./index.html",
+  "scope": "./",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#f8fafd",
   "theme_color": "#1a73e8",
+
   "icons": [
     {
-      "src": "image11.jpg",
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/png",
+      "purpose": "any"
+    }
+  ],
+
+  "screenshots": [
+    {
+      "src": "screenshot1.png",
+      "sizes": "540x720",
+      "type": "image/png"
     }
   ]
 }
